	* inst/tinytest/test_modref.R: Idem
	* inst/tinytest/test_module.R: Idem
	* inst/tinytest/test_module_client_package.R: Idem
	* inst/tinytest/test_na.R: Idem
	* inst/tinytest/test_quickanddirty.R: Idem
	* inst/tinytest/test_rcpp_package_skeleton.R: Idem
	* inst/tinytest/test_reference.R: Idem
	* inst/tinytest/test_rmath.R: Idem
	* inst/tinytest/test_robject.R: Idem

2019-11-23  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci/Dockerfile: Add tinytest to ci Docker image

2019-11-20  Dirk Eddelbuettel  <edd@debian.org>

	* R/Attributes.R: Test for and report unavailable 'LinkingTo' package

2019-11-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2019-11-18  Kun Ren  <mail@renkun.me>

	* src/attributes.cpp: Add invisible param to export attribute (#1024)
	* vignettes/rmd/Rcpp-attributes.Rmd: Add an section of Returning invisible object

2019-11-13  Dirk Eddelbuettel  <edd@debian.org>

	* .github/ISSUE_TEMPLATE.md: Another small edit
	* .github/PULL_REQUEST_TEMPLATE.md: Idem

2019-11-13  Stephen Wade  <stephematician@gmail.com>

	* inst/include/Rcpp/XPtr.h: Delete delegating ctor (follow-up #1012)
	* inst/unitTests/runit.XPTr.R: Reinsert self-tag test on Windows

2019-11-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.packageversion.R: New test
	* inst/unitTests/cpp/rcppversion.cpp: Cpp portion of test

2019-11-10  Dirk Eddelbuettel  <edd@debian.org>

	* .github/: Add files CONTRIBUTING.md, FUNDING.yml, ISSUE_TEMPLATE.md
	and PULL_REQUEST_TEMPLATE.md

	* inst/include/Rcpp/config.h: Correct RCPP_VERSION and
	RCPP_DEV_VERSION to 1.0.3

2019-11-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2019-11-09  TJ McKinley  <t.mckinley@exeter.ac.uk>

	* R/Attributes.R: Correct how cppFunction() deals with multiple
	depends arguments

2019-11-08  Romain Francois  <romain@rstudio.com>
